fix tempo input background image center and pause play icon whitespaces

--- a/assets/nav.css
+++ b/assets/nav.css
@@ -37,6 +37,7 @@
   -webkit-appearance: none;
   margin: 10px 0;
   width: 40vw;
+  direction: rtl;
 }
 
 .tempo-meter:focus {
