--- a/assets/style.css
+++ b/assets/style.css
@@ -5,11 +5,13 @@
 }
 
 .app-container {
-    width: 100vw;
-    height: 100vh;
-    background-image: url("rainbow-splash.jpg");
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background-image: url("rainbow-splash.jpg");
+  background-repeat:no-repeat;
+  background-position: center center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
